# CaFE2

./: Makefile  Makefile.in  README.md  __todo.txt  cafe.userguide.txt  cafe2.0.mm  cafe2.h  cafe_ref.cafe  command_table.c  command_table.h  config.h  config.h.in  configure  configure.in  controls.c  controls.h  debugger.c  debugger.h  fileop.c  fileop.h  functions.c  functions.h  fundamentals.c  history.txt  key.c  key.h  packinfo  stack.c  stack.h  string.c  string.h  ui.c  ui.h  ui_buildinfo.c  ui_old.c
CaFE2.xcodeproj/: okano.mode1  okano.mode1v3  okano.pbxuser  project.pbxproj
CaFE2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CaFE2.xcodeproj/project.xcworkspace/xcuserdata/okano.xcuserdatad/: UserInterfaceState.xcuserstate
CaFE2.xcodeproj/xcuserdata/okano.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
samples/: dot_cafe.okano-alice.local  make10.cafe  ten_by_4nums.cafe  ten_by_4nums_old.cafe
test_files/: _test_file_prototype.cafe  controls.cafe  fileop.cafe  functions.cafe  string_and_stack_operations.cafe  test_utilities.cafe  tests.cafe  variable_test.cafe
test_files/old/: stdin_test.txt  variable_global_test.cafe
test_files/old/multiple_file_load/: mf0.cafe  mf1.cafe  mf2.cafe  multiple_file_load.cafe
